; ModuleID = '/home/carl/AnghaBench/obs-studio/libobs-opengl/extr_gl-shaderparser.c_gl_write_outputs.c'
source_filename = "/home/carl/AnghaBench/obs-studio/libobs-opengl/extr_gl-shaderparser.c_gl_write_outputs.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.gl_shader_parser = type { i32 }
%struct.shader_func = type { i64, i32 }
%struct.shader_var = type { i8*, i64, i32, i32 }

@.str = private unnamed_addr constant [10 x i8] c"outputval\00", align 1
@.str.1 = private unnamed_addr constant [2 x i8] c"\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.gl_shader_parser*, %struct.shader_func*)* @gl_write_outputs to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @gl_write_outputs(%struct.gl_shader_parser* %0, %struct.shader_func* %1) #0 {
  %3 = alloca %struct.gl_shader_parser*, align 8
  %4 = alloca %struct.shader_func*, align 8
  %5 = alloca %struct.shader_var, align 8
  store %struct.gl_shader_parser* %0, %struct.gl_shader_parser** %3, align 8
  store %struct.shader_func* %1, %struct.shader_func** %4, align 8
  %6 = bitcast %struct.shader_var* %5 to i8*
  call void @llvm.memset.p0i8.i64(i8* align 8 %6, i8 0, i64 24, i1 false)
  %7 = load %struct.shader_func*, %struct.shader_func** %4, align 8
  %8 = getelementptr inbounds %struct.shader_func, %struct.shader_func* %7, i32 0, i32 1
  %9 = load i32, i32* %8, align 8
  %10 = getelementptr inbounds %struct.shader_var, %struct.shader_var* %5, i32 0, i32 2
  store i32 %9, i32* %10, align 8
  %11 = getelementptr inbounds %struct.shader_var, %struct.shader_var* %5, i32 0, i32 0
  store i8* getelementptr inbounds ([10 x i8], [10 x i8]* @.str, i64 0, i64 0), i8** %11, align 8
  %12 = load %struct.shader_func*, %struct.shader_func** %4, align 8
  %13 = getelementptr inbounds %struct.shader_func, %struct.shader_func* %12, i32 0, i32 0
  %14 = load i64, i64* %13, align 8
  %15 = icmp ne i64 %14, 0
  br i1 %15, label %16, label %21

16:                                               ; preds = %2
  %17 = load %struct.shader_func*, %struct.shader_func** %4, align 8
  %18 = getelementptr inbounds %struct.shader_func, %struct.shader_func* %17, i32 0, i32 0
  %19 = load i64, i64* %18, align 8
  %20 = getelementptr inbounds %struct.shader_var, %struct.shader_var* %5, i32 0, i32 1
  store i64 %19, i64* %20, align 8
  br label %21

21:                                               ; preds = %16, %2
  %22 = load %struct.gl_shader_parser*, %struct.gl_shader_parser** %3, align 8
  %23 = call i32 @gl_write_storage_var(%struct.gl_shader_parser* %22, %struct.shader_var* %5, i32 0, i32* null)
  %24 = load %struct.gl_shader_parser*, %struct.gl_shader_parser** %3, align 8
  %25 = getelementptr inbounds %struct.gl_shader_parser, %struct.gl_shader_parser* %24, i32 0, i32 0
  %26 = call i32 @dstr_cat(i32* %25, i8* getelementptr inbounds ([2 x i8], [2 x i8]* @.str.1, i64 0, i64 0))
  ret void
}

; Function Attrs: argmemonly nounwind willreturn
declare void @llvm.memset.p0i8.i64(i8* nocapture writeonly, i8, i64, i1 immarg) #1

declare dso_local i32 @gl_write_storage_var(%struct.gl_shader_parser*, %struct.shader_var*, i32, i32*) #2

declare dso_local i32 @dstr_cat(i32*, i8*) #2


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
